--- a/dice.html
+++ b/dice.html
@@ -28,6 +28,8 @@
   </body>
 
   <footer>
-    
+    <div>
+      <p>Created by <a href="https://github.com/Rsdonovan">Ryan Donovan</a></p>
+    </div>
   </footer>
 </html>
